# kavacha

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  SECURITY.md  kavacha-global-spec.md  railway.json  requirements.txt
app/: main.py
app/api/v1/: architect.py  auth.py  ceo_review.py  compliance.py  dashboard.py  demo.py  fix_patterns.py  honeypot.py  issues.py  memory.py  monitor.py  projects.py  requirements.py  sdk.py  support.py  user.py  waitlist.py
app/core/: account_rate_limit.py  accounts.py  api_keys.py  audit.py  captcha.py  config.py  limiter.py  llm_provider.py  llm_usage.py  login_security.py  middleware.py  notifier.py  ownership.py  prompts.py  request_limits.py  sanitize_html.py  scheduler.py  security.py  security_headers.py  sessions.py  validation.py
app/db/: database.py  init_db.py  schema.sql
app/memory/: client.py  engine.py  sanitize.py
app/services/: architect_agent.py  ceo_review_agent.py  compliance_report.py  fix_engine.py  monitor_agent.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccountStatusPanel.tsx  ErrorBanner.tsx  FixEngineReplay.tsx  HealthBadge.tsx  HomeRoute.tsx  Layout.tsx  PipelineVisual.tsx  ProjectHeader.tsx  ProjectTabs.tsx  ProtectedRoute.tsx  (+2 more)
kavacha-sdk/: README.md  pyproject.toml
kavacha-sdk/kavacha/: __init__.py  _client.py  _config.py
tests/: test_architect.py  test_auth.py  test_memory.py  test_projects.py  test_sanitize.py
(+36 files in other folders)
